Rename project from SafeChain Agent to SafeChain Ultimate, updating all relevant files and references throughout the codebase, including documentation, build scripts, and configuration files.

--- a/packaging/macos/welcome.html
+++ b/packaging/macos/welcome.html
@@ -23,14 +23,14 @@
     </style>
 </head>
 <body>
-    <h1>Welcome to SafeChain Agent Installer</h1>
-    <p>This will install SafeChain Agent on your computer.</p>
+    <h1>Welcome to SafeChain Ultimate Installer</h1>
+    <p>This will install SafeChain Ultimate on your computer.</p>
     
-    <p>SafeChain Agent is a lightweight background service that provides real-time security scanning for your development environment.</p>
+    <p>SafeChain Ultimate is a lightweight background service that provides real-time security scanning for your development environment.</p>
     
     <p>The installer will:</p>
     <ul>
-        <li>Install SafeChain Agent binaries</li>
+        <li>Install SafeChain Ultimate binaries</li>
         <li>Install and start a system daemon that runs as root</li>
         <li>Configure the agent to start automatically at boot</li>
     </ul>
