Update workflows and documentation for SafeChain Ultimate
- Renamed workflows and artifacts from "agent" to "ultimate" to reflect the new project name.
- Updated macOS and Windows installation scripts and documentation to reference SafeChain Ultimate instead of Aikido Agent.
- Adjusted license files to specify SafeChain Ultimate in the context of commercial activities.

--- a/packaging/macos/conclusion.html
+++ b/packaging/macos/conclusion.html
@@ -38,7 +38,7 @@
     <p><strong>Managing the Service:</strong></p>
     <ul>
         <li>The agent runs as a system daemon and starts automatically at boot</li>
-        <li>View status: <code>sudo launchctl list | grep safechainagent</code></li>
+        <li>View status: <code>sudo launchctl list | grep safechainultimate</code></li>
         <li>Stop: <code>sudo launchctl bootout system/com.aikidosecurity.safechainultimate</code></li>
         <li>Start: <code>sudo launchctl bootstrap system /Library/LaunchDaemons/com.aikidosecurity.safechainultimate.plist</code></li>
     </ul>
