--- a/packaging/macos/welcome.html
+++ b/packaging/macos/welcome.html
@@ -23,7 +23,7 @@
     </style>
 </head>
 <body>
-    <h1>Welcome to SafeChain Ultimate Installer</h1>
+    <h1>Welcome to the SafeChain Ultimate Installer</h1>
     <p>This will install SafeChain Ultimate on your computer.</p>
     
     <p>SafeChain Ultimate is a lightweight background service that provides real-time security scanning for your development environment.</p>
